hphp/test/slow/like_types/like_casts_bad.php.expectf
Fatal error: Expected constant expression for initializer in %s/test/slow/like_types/like_casts_bad.php on line 3